--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/vars";
+@import "utils/mixins";
+@import "utils/reset";
 
-body {
-  background: $c-gray;
-}
+@import "block/header";
+@import "block/whoweare";
+@import "block/expertise";
+@import "block/services";
+@import "block/testimonials";
+@import "block/vision";
+@import "block/services-card";
+@import "block/testimonials-card";
+@import "block/form__field";
+@import "block/nav__mobile";
+@import "block/footer";
+@import "block/page";
+@import "block/nav";
+@import "block/section";
+@import "block/container";
+@import "block/logo";
+@import "block/social";
+@import "block/grid";
+@import "block/button";
+@import "block/slider";
