--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
-$c-gray: #eee;
+$color-white: #fff;
+$color-title: #253757;
+$color-subtitle: #6C788B;
+$color-block: #C0CDD7;
+$color-blue: #2060F6;
+$color-learn: #334563;
+$color-background: #2C2C2C;
+$color-section: #F2F6FA;
+$color-subtitle-h: #C0CDD7;
+
+$icon-width: 45px;
+$icon-menu-width: 18px;
