--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,30 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin Mobile {
+  @media (min-width: 320px) {
+    @content;
   }
 }
+
+@mixin Tablet {
+  @media (min-width: 640px) {
+    @content;
+  }
+}
+
+@mixin smallDestop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin Desktop {
+  @media (min-width: 1600px) {
+    @content;
+  }
+}
+
+@mixin Large {
+  @media (min-width: 2560px) {
+    @content;
+  }
+}
+
